fixed navbar collapse bug

--- a/src/components/Header/_Header.scss
+++ b/src/components/Header/_Header.scss
@@ -21,3 +21,9 @@ $header-bg: #151515;
   justify-content: flex-end;
   align-items: center;
 }
+.collapse.show {
+  background: rgb(21, 21, 21);
+  z-index: 999;
+  width: 100%;
+  padding-right: 2rem;
+}
